<resources>
    <string name="app_name">Ulaugh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ulaugh">ULaugh</string>
    <string name="full_name">Full Name</string>
    <string name="enter_name">Enter your full name address</string>
    <string name="user_name">Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_email_ph">Enter Email or Phone number</string>
    <string name="email">Email</string>
    <string name="email_option">Email (Optional)</string>
    <string name="enter_mail">Enter your email</string>
    <string name="phone_no">Phone Number</string>
    <string name="enter_ph">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="enter_pass">Enter your password</string>
    <string name="register_instruction">By signing up, you’wre agree to our <b><font fgcolor='#5257C3'>Term &amp; Conditions</font></b> and <b><font fgcolor='#5257C3'>Privacy Policy</font></b></string>
    <string name="continue1">Continue</string>
    <string name="register_google">Sign up with Google</string>
    <string name="join_us">Joined us before?<b><font fgcolor='#5257C3'>Sign In</font></b></string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="want_to_join">Want to join us? <b><font fgcolor='#5257C3'>Sign Up</font></b></string>
    <string name="phone_email">Phone Number Or Username</string>
    <string name="sign_in">Sign In</string>
    <string name="txt_error_message">%1$S*</string>

    <string name="hint_forgot">Don’t Worry! It happens. Please enter the address associated with your account.</string>
    <string name="hint_otp">An 6 digit code has been sent to</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_pass">Reset Password!</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="welcome">Welcome to <b>Ulaugh</b></string>
    <string name="old_ph_no">Old Phone Number</string>
    <string name="new_ph_no">New Phone Number</string>
    <string name="setting">Settings</string>
    <string name="real_reward">Real Money Rewards</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_ph">Change Phone Number</string>
    <string name="notification">Notifications</string>
    <string name="switch_private">Switch to private</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="private_account">This Account is Private.</string>
    <string name="info_private_acc">Send Follow Request to see their photos and videos.</string>
    <string name="follow">Follow</string>
    <string name="accept">Accept</string>
    <string name="post">Posts</string>
    <string name="follower">Followers</string>
    <string name="top_reaction">Top Reactions</string>
    <string name="react">React</string>
    <string name="no_data">No data found</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="insight">Insights</string>
    <string name="reward">Rewards</string>
    <string name="claim">Claim Reward</string>
    <string name="scan_again">Scan again</string>
    <string name="choose_ph">Choose Photo or Video</string>
    <string name="description">Description</string>
    <string name="enter_des">Enter description</string>
    <string name="add_tag">Add Tags</string>
    <string name="trending">Trending</string>
    <string name="reacted">Reacted</string>
    <string name="haha">Haha Reacts</string>
    <string name="express">Expressionless Reacts</string>
    <string name="love_rea">Love Reacts</string>
    <string name="sus_rea">Sus Reacts</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_client_id">305510272422-kae5pel85r9ohn94orsl6e0ai2k109uh.apps.googleusercontent.com</string>
    <string name="search">Search</string>
    <string name="default_notification_channel_id">sadgsda</string>
    <string name="msg_token_fmt">lsadjg</string>
    <string name="faceless">No face detected</string>
    <string name="decline">Decline</string>
    <string name="face">Face</string>

</resources>
