<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        <include-->
        <!--            android:id="@+id/code_fragment"-->
        <!--            layout="@layout/fragment_code"-->
        <!--            android:visibility="gone"/>-->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/enter_otp"
            android:textColor="@color/dark_black"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/splash_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/full_name"
            android:textColor="@color/grey_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/grey_rc"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/grey_3"
            android:textColorHint="@color/grey_3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_name"
            android:textColor="@color/grey_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/grey_rc"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAllCaps="false"
            android:textColor="@color/grey_3"
            android:textColorHint="@color/grey_3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_option"
            android:textColor="@color/grey_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/grey_rc"
            android:ems="10"
            android:hint="@string/enter_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAllCaps="false"
            android:textColor="@color/grey_3"
            android:textColorHint="@color/grey_3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_no"
            android:textColor="@color/grey_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <!--        <View-->
        <!--            android:id="@+id/country_picker"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            app:layout_constraintTop_toTopOf="@id/phone_no"-->
        <!--            app:layout_constraintStart_toStartOf="@id/textView10"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/phone_no"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/phone_no"/>-->

        <!--        <ImageView-->
        <!--            android:id="@+id/flag_iv"-->
        <!--            android:layout_width="20dp"-->
        <!--            android:layout_height="20dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/phone_no"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/textView10"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/phone_no"-->
        <!--            app:srcCompat="@drawable/user_logo" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/cell_code"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="2dp"-->
        <!--            android:text=""-->
        <!--            android:textSize="14sp"-->
        <!--            android:textColor="@color/dark_black"-->
        <!--            android:fontFamily="@font/poppins_medium"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/flag_iv"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/flag_iv"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/flag_iv" />-->

        <!--        <ImageView-->
        <!--            android:id="@+id/dropdown_iv"-->
        <!--            android:layout_width="10dp"-->
        <!--            android:layout_height="10dp"-->
        <!--            android:layout_marginStart="2dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/flag_iv"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/cell_code"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/flag_iv"-->
        <!--            app:srcCompat="@drawable/down_errow" />-->

        <EditText
            android:id="@+id/phone_no"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/grey_rc"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/enter_ph"
            android:inputType="phone"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAllCaps="false"
            android:textColor="@color/grey_3"
            android:textColorHint="@color/grey_3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_pass_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:visibility="gone"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/grey_rc"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/grey_3"
                android:textColorHint="@color/grey_3"
                android:textCursorDrawable="@null"
                android:textSize="12sp"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/register_instruction"
            app:layout_constraintEnd_toEndOf="@+id/email_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_pass_et" />

        <include
            android:id="@+id/included2"
            layout="@layout/continue_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@id/email_et"
            app:layout_constraintStart_toStartOf="@id/email_et"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/or"
            android:textColor="@color/dark_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/included2" />

        <View
            android:id="@+id/login_google"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/grey_rc"
            android:drawablePadding="16dp"
            android:text="@string/sign_in_google"
            android:textAllCaps="false"
            android:textColor="@color/dark_black"
            app:layout_constraintEnd_toEndOf="@+id/included2"
            app:layout_constraintStart_toStartOf="@+id/included2"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_google"
            android:textAllCaps="false"
            android:textColor="@color/dark_black"
            app:layout_constraintBottom_toBottomOf="@id/login_google"
            app:layout_constraintEnd_toEndOf="@id/login_google"
            app:layout_constraintStart_toStartOf="@id/login_google"
            app:layout_constraintTop_toTopOf="@id/login_google" />

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/google_ic"
            app:layout_constraintBottom_toBottomOf="@id/login_google"
            app:layout_constraintEnd_toStartOf="@id/textView18"
            app:layout_constraintTop_toTopOf="@id/login_google" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/join_us"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_google"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/included2" />

        <EditText
            android:id="@+id/otp_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:enabled="true"
            android:gravity="center"
            android:hint="@string/enter_otp"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>