<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/included"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/forgot_pass"
        android:textColor="@color/dark_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/included" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_regular"
        android:lineSpacingExtra="02sp"
        android:text="@string/hint_forgot"
        android:textColor="@color/dark_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/grey_rc"
        android:ems="10"
        android:hint="@string/enter_ph"
        android:inputType="phone"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAllCaps="false"
        android:textColor="@color/grey_3"
        android:textColorHint="@color/grey_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <include
        android:id="@+id/included2"
        layout="@layout/continue_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="@id/phone_no"
        app:layout_constraintStart_toStartOf="@id/phone_no"
        app:layout_constraintTop_toBottomOf="@+id/phone_no" />
</androidx.constraintlayout.widget.ConstraintLayout>